[feat] update cloudformation
- 단일 계정 사용으로 구조 변경

--- a/cloudFormation/control-agent-stack.yaml
+++ b/cloudFormation/control-agent-stack.yaml
@@ -1,4 +1,4 @@
-# control-agent.yaml
+# control-agent-stack.yaml
 
 AWSTemplateFormatVersion: '2010-09-09'
 Description: Control Account - K3s Control Plane Only
