--- a/helm/backend/templates/deployment.yaml
+++ b/helm/backend/templates/deployment.yaml
@@ -1,22 +1,17 @@
-# deployment.yaml
-
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ .Release.Name }}
-  namespace: {{ .Values.namespaceOverride | default .Release.Namespace }}
 spec:
-  replicas: {{ .Values.replicaCount }}
-  selector:
-    matchLabels:
-      app: {{ .Release.Name }}
   template:
     metadata:
       labels:
         app: {{ .Release.Name }}
     spec:
+{{- with .Values.affinity }}
+      affinity:
+{{- toYaml . | nindent 8 }}
+{{- end }}
+{{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-{{- toYaml .Values.imagePullSecrets | nindent 8 }}
+{{- toYaml . | nindent 8 }}
+{{- end }}
       containers:
         - name: {{ .Release.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
