--- a/cloudFormation/worker-agent-stack.yaml
+++ b/cloudFormation/worker-agent-stack.yaml
@@ -94,14 +94,14 @@ Resources:
     Type: AWS::EC2::LaunchTemplate
     Properties:
       LaunchTemplateData:
-        InstanceType: t3.small
+        InstanceType: t2.micro
         ImageId: !Ref AmiId
         IamInstanceProfile:
           Name: !Ref InstanceProfile
         SecurityGroupIds:
           - !Ref SecurityGroup
-        InstanceMarketOptions:
-          MarketType: spot
+#        InstanceMarketOptions:
+#          MarketType: spot
 #        NetworkInterfaces:
 #          - DeviceIndex: 0
 #            AssociatePublicIpAddress: false
