[feat] SSM → K8s Secret 1회 동기화 스크립트

--- a/helm/backend/values-dev.yaml
+++ b/helm/backend/values-dev.yaml
@@ -47,4 +47,8 @@ resources:
 imagePullSecrets:
   - name: ecr-creds
 
-namespaceOverride: "backend-dev"
+namespaceOverride: backend-dev
+aws:
+  region: ap-northeast-2
+ssm:
+  path: /ilsang/backend_dev
