--- a/helm/backend/templates/deployment.yaml
+++ b/helm/backend/templates/deployment.yaml
@@ -1,4 +1,3 @@
-# templates/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -22,6 +21,30 @@ spec:
       imagePullSecrets:
 {{- toYaml . | nindent 8 }}
 {{- end }}
+
+      # ====== initContainer 추가 ======
+      initContainers:
+        - name: sync-ssm
+          image: amazon/aws-cli:2.15.9
+          command: ["/bin/bash", "/scripts/sync-ssm-to-secret.sh"]
+          volumeMounts:
+            - name: sync-script
+              mountPath: /scripts
+          env:
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: aws_access_key_id
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: aws_secret_access_key
+            - name: AWS_DEFAULT_REGION
+              value: {{ .Values.aws.region | quote }}
+      # ===============================
+
       containers:
         - name: {{ .Release.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -39,3 +62,9 @@ spec:
               value: DEBUG
           resources:
 {{- toYaml .Values.resources | nindent 12 }}
+
+      volumes:
+        - name: sync-script
+          configMap:
+            name: sync-ssm-script
+            defaultMode: 0755
